@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n3.c	1.16 (gritter) 8/16/05
+ * Sccsid @(#)n3.c	1.17 (gritter) 8/18/05
  */
 
 /*
@@ -98,6 +98,7 @@ growcontab(void)
 			contab[i] = initcontab[i];
 		addcon(i++, "afm", (void(*)(int))caseafm);
 		addcon(i++, "supply", (void(*)(int))casesupply);
+		addcon(i++, "tkf", (void(*)(int))casetkf);
 	} else {
 		for (i = 0; i < sizeof mhash / sizeof *mhash; i++)
 			if (mhash[i])
